treewide: Update from FireOS 8.3.2.0

--- a/arch/arm64/configs/sunstone_defconfig
+++ b/arch/arm64/configs/sunstone_defconfig
@@ -71,8 +71,9 @@ CONFIG_SPI_MT65XX=m
 CONFIG_SPMI_MTK_PMIF=m
 CONFIG_HIDRAW=y
 CONFIG_HID_MULTITOUCH=y
-# CONFIG_HID_BATTERY_STRENGTH is not set
+CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HID_TOUCHSCREEN_FTS=m
+CONFIG_HID_SANIDINE=m
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_FTS=m
 CONFIG_TOUCHSCREEN_NT36XXX=m
@@ -199,7 +200,7 @@ CONFIG_VIDEO_MTK_ISP_IPESYS=m
 CONFIG_MTK_CAMERA_ISP_SUPPORT=y
 CONFIG_MTK_CAMERA_MFB_ISP6S=m
 CONFIG_MTK_CAMERA_ISP_WPE_SUPPORT=m
-CONFIG_MTK_CAMERA_DPE_ISP6S=m
+# CONFIG_MTK_CAMERA_DPE_ISP6S is not set
 # CONFIG_MTK_CAMERA_RSC_ISP6S is not set
 CONFIG_MTK_CAMERA_DIP_ISP6S=m
 CONFIG_MTK_CAMERA_DUAL_DIP_ISP6S=m
