--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -92,6 +92,14 @@ config HID_GENERIC
 menu "Special HID drivers"
 	depends on HID
 
+config HID_SANIDINE
+    tristate "sanidine USB(Pogo) Keyboard"
+    depends on USB_HID
+    help
+      Support for sanidine USB(Pogo) Keyboard
+
+      Say Y here if you want to enable support for Kawartha KB
+
 config HID_A4TECH
 	tristate "A4 tech mice"
 	depends on HID
