treewide: Update from FireOS 8.3.2.1

--- a/arch/arm64/configs/sunstone_defconfig
+++ b/arch/arm64/configs/sunstone_defconfig
@@ -74,6 +74,7 @@ CONFIG_HID_MULTITOUCH=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HID_TOUCHSCREEN_FTS=m
 CONFIG_HID_SANIDINE=m
+CONFIG_STYLUS_BATTERY_ALGO=m
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_TOUCHSCREEN_FTS=m
 CONFIG_TOUCHSCREEN_NT36XXX=m
