--- a/drivers/hid/i2c_hid_of_nvt_ts/Makefile
+++ b/drivers/hid/i2c_hid_of_nvt_ts/Makefile
@@ -9,6 +9,7 @@
 # in i2c-hid/Makefile
 #
 ccflags-$(CONFIG_DRM_MEDIATEK_V2) += -I$(srctree)/drivers/gpu/drm/mediatek/mediatek_v2/
+ccflags-y += -I$(srctree)/drivers/hid/stylus/
 obj-$(CONFIG_I2C_HID_OF_NVT_TS)				+= i2c-hid-nt36523n.o
 i2c-hid-nt36523n-y := i2c-hid-of-nvt-ts.o \
 		nvt_i2c_hid.o \
